# agentic-code-analysis

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  analyze_results.py  claude.md  env.example  pyproject.toml  requirements.txt
data/benchmarks/custom/: access_control_vulnerable.sol  auction.sol  integer_overflow.sol  reentrancy_vulnerable.sol  safe_contract.sol  safe_king_of_the_ether_throne.sol  spank_chain_payment.sol
data/benchmarks/ground_truth/: custom_benchmark.json  medium_benchmark.json
data/benchmarks/medium/: Account.sol  BECToken.sol  BaseDelegation.sol  DAO.sol  ERC1155.sol  ERC6909.sol  ERC721.sol  ERC721A.sol  Exchange.sol  FibonacciBalance.sol  PausableZone.sol  Poolz.sol  Trading.sol  VestingWallet.sol  king_of_the_ether_throne.sol  list_dos.sol  lotto.sol  multiowned_vulnerable.sol  parity_wallet_bug_2.sol  rubixi.sol  spank_chain_payment.sol
data/results/: .gitkeep  Poolz_2026-05-16T10-37-02.md  benchmark_2026-05-12_20-09-46.json  static_analysis_20260511_170447.csv
data/results/transcripts/anthropic-benchmark_2026-04-04_22-42-15/: Account.json  (+27 more)
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  attacker_agent.py  base_agent.py  baseline_agent.py  defender_agent.py  judge_agent.py
src/knowledge/: __init__.py  vulnerability_db.py
src/knowledge/prompts/: __init__.py  attacker.py  defender.py  judge.py
src/orchestration/: __init__.py  conversation.py  debate_manager.py
src/output/: __init__.py  evaluator.py  report.py
src/parsers/: __init__.py  base_parser.py  language_detector.py  solidity_parser.py
src/providers/: __init__.py  anthropic_provider.py  base_provider.py  gemini_provider.py  openai_provider.py  provider_factory.py
src/tools/: static_analysis.py
tests/: __init__.py  test_agents.py  test_baseline.py  test_debate.py  test_parsers.py  test_providers.py
(+84 files in other folders)
